Add classic jar file
For those that can't handle module-info.class
Fixes #188